Mostar comentarios y replicas

--- a/app/views/comentaris/show.html.erb
+++ b/app/views/comentaris/show.html.erb
@@ -59,8 +59,8 @@
                                                   </div>
                                                 <% end %>
                                               
-                                                <%= form.hidden_field :contribucion_id, :value => @comentari2.contribucion_id %>
-                                                <%= form.hidden_field :comentari_id, :value => @comentari2.comentari_id %>
+                                                <%= form.hidden_field :contribucion_id, :value => @comentari.contribucion_id %>
+                                                <%= form.hidden_field :comentari_id, :value => @comentari.id %>
                                     
                                                 <div class="field">
                                                   <%= form.text_area :text %>
