--- a/app/views/contribucions/show.html.erb
+++ b/app/views/contribucions/show.html.erb
@@ -62,58 +62,8 @@
                     </td>
                    </tr> 
                 </tbody>
-                <% if !@comentaris.nil? %>
-                   <% @comentaris.each do |c| %>
-                     <tr>
-                        <td class="ind"><img src="s.gif" width="0" height="1"></td>
-                        
-                        <td class="votelinks" valign="top">
-                          <center>
-                            <a id="up_22856013" href="vote?id=22856013&amp;how=up&amp;goto=item%3Fid%3D22855286">
-                            <div class="votearrow" title="upvote"></div>
-                            </a>
-                          </center>
-                        </td>
-                        <td class="default">
-                          <div style="margin-top:2px; margin-bottom:-10px;">
-                            <span class="comhead">
-                              <a href="/users/<%= c.user_id%>" class="hnuser"><%=c.user_id%></a> 
-                            <span class="age">
-                              <a href="item?id=22856013"><%= time_ago_in_words(c.created_at) %></a>
-                            </span> 
-                            <span id="unv_22856013"></span>
-                              <span class="par"></span> 
-                              <a class="togg" n="1" href="javascript:void(0)" onclick="return toggle(event, 22856013)">[-]</a>          
-                              <span class="storyon"></span>
-                            </span>
-                          </div>
-                            <br>
-                            <div class="comment">
-                              <span class="commtext c00"> <%=c.text%></span>
-                            <div class="reply">       
-                              <p>
-                                <font size="1">
-                                    <a href="/contribucions/<%=@contribucion.id%>/comentaris/<%=c.id%>/">reply</a>
-                                </font>
-                              </p>
-                            </div>
-                            </span>
-                            </div>
-                            <td>
-                              <% if !c.comentaris.nil? %>
-                                <span><%=c.comentaris.size%></span>
-                                <% c.comentaris.each do |cc| %>
-                                
-                                  <span>aaaa</span>
-                                <%end%>
-                              <%end%>
-                            </td>
-                            </td>
-                  <%end%>
-            </tr>
-        <%end%>
-
-      </table>
+              <%= render "comentaris/comentari",  comentaris: @comentaris %>        
+        </table>
     </td>
 </tr>
 
