--- a/app/views/menu/_menu.html.erb
+++ b/app/views/menu/_menu.html.erb
@@ -32,11 +32,11 @@
                       <% if !current_user().nil? %>
                         |<%= link_to 'threads',comentaris_threads_path(:user_id => current_user().id),method: "get"  %>
                       <% end %>
-                      | <a href="front">past</a> 
-                      | <a href="newcomments">comments</a> 
+                      | <a href="#">past</a> 
+                      | <a href="#">comments</a> 
                       | <%= link_to "ask", contribucions_askPage_path %> |
-                      <a href="show">show</a> |
-                      <a href="jobs">jobs</a> | 
+                      <a href="#">show</a> |
+                      <a href="#">jobs</a> | 
                       <%= link_to 'submit', new_contribucion_path %>
                        <% if !@tipo.nil? %>
                        |<font color="#ffffff"><%= @tipo %></font>  
