--- a/app/views/contribucions/_index.html.erb
+++ b/app/views/contribucions/_index.html.erb
@@ -43,7 +43,8 @@
                             <%= link_to 'Destroy', contribucion, method: :delete, data: {confirm: 'Are you sure?'} %>
                           <% end %>
                         <% end %>  
-                        <span id="unv_22681207"></span> | <a href="hide?id=22681207&amp;goto=news">hide</a> | <%= link_to 'comments',comentaris_new_path(:id => contribucion.id), method: :get %>
+                        <span id="unv_22681207"></span> | <a href="hide?id=22681207&amp;goto=news">hide</a> 
+                        | <a href="<%= "/contribucions/#{contribucion.id}" %>">comments</a>
                       </td>
                     </tr>
                     <tr class="spacer" style="height:5px"></tr>
