--- a/app/views/contribucions/show.html.erb
+++ b/app/views/contribucions/show.html.erb
@@ -32,7 +32,7 @@
                       <td class="subtext">
                       <span class="score" id="score_22681207"><%=@contribucion.points%> points</span>
                         by 
-                        <a href="/users/<%=@contribucion.user_id%>" class="hnuser">hardcoded</a> 
+                        <a href="/users/<%=@contribucion.user_id%>" class="hnuser"><%=current_user().email%></a> 
                         <span class="age">
                            <%= time_ago_in_words(@contribucion.created_at) %>
                         </span>
