--- a/app/views/comentaris/_comentari.html.erb
+++ b/app/views/comentaris/_comentari.html.erb
@@ -1,28 +1,14 @@
-<table>
-  <tr>
-    <td>
 
-    <% if !@comentaris.nil? %>
-      <ul>  
-        <% @comentaris.each do |c| %>
-          <% if c.comentari_id == 0 %>
-            <li style="list-style:none;">
-               <a style="color: #828282;" href="#">▲</a>
-               <a style="color: #828282;" href="#"> <%= c.user.email %> </a>
-               <span class="age">
-                 <a href="item?id=22856013"><%= time_ago_in_words(c.created_at) %></a>
-               </span> 
-              Comentarios -> <%= c.comentaris.size %>
-              <br/>
-              <span><%=c.text%></span>
-              <br/>
-              <a style="color: #828282;" href="/contribucions/<%=c.id%>/comentaris/<%=c.id%>">reply</a>
-              </li>
-                <%= render "comentaris/replys",  replys: c.comentaris %>
-          <% end %>  
-        <% end %>
-      </ul>
-    <% end %>
-    </td>
-  </tr>
-</table>
+<li style="list-style:none;">
+   <a style="color: #828282;" href="#">▲</a>
+   <a style="color: #828282;" href="/users/<%=c.user_id%>"> <%= c.user.email %> </a>
+   <span class="age">
+     <a><%= time_ago_in_words(c.created_at) %></a>
+   </span> 
+  Comentarios -> <%= c.comentaris.size %>
+  <br/>
+  <span><%=c.text%></span>
+  <br/>
+  <a style="color: #828282;" href="/contribucions/<%=c.id%>/comentaris/<%=c.id%>">reply</a>
+</li>
+ 
