--- a/app/views/comentaris/threads.html.erb
+++ b/app/views/comentaris/threads.html.erb
@@ -7,7 +7,7 @@
 <table class="itemlist" cellspacing="0" cellpadding="0" border="0">
   <tr>
     <td>
-        <%= render "comentari",  comentaris: @comentaris %>      
+        <%= render "comentaris",  comentaris: @comentaris %>      
 
     </td>
   </tr>
