--- a/app/views/comentaris/_replys.html.erb
+++ b/app/views/comentaris/_replys.html.erb
@@ -1,19 +1,8 @@
 <% if !replys.nil? %>
   <ul>  
     <% replys.each do |r| %>
-        <li style="list-style:none;">
-          <a style="color: #828282;" href="#">▲</a>
-          <a style="color: #828282;" href="#"> <%= r.user.email %>  </a>
-          <span class="age">
-           <a href="item?id=22856013"><%= time_ago_in_words(r.created_at) %></a>
-          </span> 
-          Comentarios -> <%= r.comentaris.size %>
-          <br/>
-          <span><%=r.text%></span>
-          <br/>
-          <a style="color: #828282;" href="/contribucions/<%=r.id%>/comentaris/<%=r.id%>">reply</a>
-          </li>
-          <%= render "comentaris/replys",  replys: r.comentaris %>
+        <%= render "comentaris/comentari",  c: r %>
+        <%= render "comentaris/replys",  replys: r.comentaris %>
     <% end %>
   </ul>
 <% end %>
