--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,12 +27,12 @@
                     
                     <p>
                       <strong>Contribucions:</strong>
-                      <%= link_to 'submissions',contribucions_submitted_path(:id => current_user().id),method: "get"  %>
+                      <%= link_to 'submissions',contribucions_submitted_path(:id => @user.id),method: "get"  %>
                     </p>
                     
                     <p>
                       <strong>Comentaris:</strong>
-                      <%= link_to 'comments',comentaris_threads_path(:user_id => current_user().id),method: "get"  %>
+                      <%= link_to 'comments',comentaris_threads_path(:user_id => @user.id),method: "get"  %>
                     </p>
                     
                     <% if current_user().id == @user.id %>
