--- a/app/views/contribucions/_contribucion.html.erb
+++ b/app/views/contribucions/_contribucion.html.erb
@@ -7,6 +7,8 @@
     <center>
       <a id="up_22681207" <%= link_to '▲', upvote_contribucion_path(contribucion, :lloc => "main"), method: :put %>
       </a>
+      <a id="up_22681207" <%= link_to '▼', downvote_contribucion_path(contribucion, :lloc => "main"), method: :put %>
+      </a>
     </center>
   </td>
     <td class="title">
