--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -42,6 +42,11 @@
                       <%= link_to 'upvoted comments',comentaris_threads_path(:user_id => @user.id),method: "get"  %>
                     </p>
                     
+                    <p>
+                      <strong>Apitoken:</strong>
+                      <%=@user.apitoken %>
+                    </p>
+                    
                     <% if current_user().id == @user.id %>
                        <a href="/users/<%=@user.id%>/edit" class="hnuser">Edit Profile </a> 
                        |
